syntax = "proto3";

package msgs;
option java_package = " alxdev.c2server.models.proto";

message FileData{
  string filename = 1;
  bytes data = 2;
  uint64 size = 3;
}